[gd_scene load_steps=9 format=3 uid="uid://b54ry6j5wodnl"]

[ext_resource type="Theme" uid="uid://dpvydela4folv" path="res://resources/theme.tres" id="1_4ckg1"]
[ext_resource type="Script" path="res://scripts/NewMachineScreen.gd" id="2_eihi0"]
[ext_resource type="Texture2D" uid="uid://bagin3avprh1a" path="res://assets/coffee.png" id="3_c65ku"]

[sub_resource type="Gradient" id="Gradient_kwajs"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(0.687402, 0.992539, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_jmwke"]
gradient = SubResource("Gradient_kwajs")

[sub_resource type="Animation" id="Animation_xbl7k"]
length = 4.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MachinePosition:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 6.28319, 0)]
}

[sub_resource type="Animation" id="Animation_dfbr8"]
resource_name = "rotate"
length = 4.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MachinePosition:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 6.28319, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0321l"]
_data = {
"RESET": SubResource("Animation_xbl7k"),
"rotate": SubResource("Animation_dfbr8")
}

[node name="NewMachineScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_4ckg1")
script = ExtResource("2_eihi0")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_jmwke")

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -346.0
offset_top = 40.0
offset_right = 347.0
offset_bottom = 161.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 100
text = "New Machine:"
horizontal_alignment = 1

[node name="MachineImage" type="SubViewportContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -129.0
offset_top = -121.5
offset_right = 129.0
offset_bottom = 121.5
grow_horizontal = 2
grow_vertical = 2

[node name="SubViewport" type="SubViewport" parent="MachineImage"]
own_world_3d = true
transparent_bg = true
handle_input_locally = false
size = Vector2i(350, 350)
render_target_update_mode = 4

[node name="Camera3d" type="Camera3D" parent="MachineImage/SubViewport"]
transform = Transform3D(0.707107, -0.241845, 0.664463, 0, 0.939693, 0.34202, -0.707107, -0.241845, 0.664463, 0.7, 0.7, 0.7)
fov = 60.6645

[node name="MachinePosition" type="Marker3D" parent="MachineImage/SubViewport"]

[node name="SpotLight3d" type="SpotLight3D" parent="MachineImage/SubViewport"]
transform = Transform3D(0.707107, -0.241845, 0.664463, 0, 0.939692, 0.34202, -0.707107, -0.241845, 0.664463, 0.7, 0.7, 0.7)

[node name="AnimationPlayer" type="AnimationPlayer" parent="MachineImage/SubViewport"]
autoplay = "rotate"
libraries = {
"": SubResource("AnimationLibrary_0321l")
}

[node name="MachineName" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -112.0
offset_top = -248.0
offset_right = 113.0
offset_bottom = -174.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 60
text = "Espresso Machine"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = 205.0
offset_right = 20.0
offset_bottom = 304.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
offset_right = 273.0
offset_bottom = 100.0
theme_override_constants/margin_right = 20

[node name="Description" type="Label" parent="HBoxContainer/MarginContainer"]
layout_mode = 2
offset_top = 13.0
offset_right = 253.0
offset_bottom = 87.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 60
text = "Produces"

[node name="DescriptionImage" type="TextureRect" parent="HBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2i(100, 100)
layout_mode = 2
offset_left = 277.0
offset_right = 377.0
offset_bottom = 100.0
texture = ExtResource("3_c65ku")
stretch_mode = 5
